Initial snipping (can select region only), welcome screen at System Tray.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,11 +31,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src-frontend/*"
+        "./src/*"
       ]
     }
   },
   "include": [
-    "src-frontend"
+    "src"
   ]
 }
