--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,11 +15,27 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.5.3" }
+tauri-build = { version = "2.5.3", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.9.4" }
+tauri = { version = "2.9.4", features = ["image-png", "tray-icon"] }
 tauri-plugin-log = "2"
+tauri-plugin-global-shortcut = "2"
+
+# Screen capture
+xcap = "0.0.13"
+
+# Image processing
+image = "0.25"
+
+# Clipboard
+arboard = "3.4"
+
+# Date/time for filenames
+chrono = "0.4"
+
+# Directory paths
+dirs = "5.0"
