--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-konva": "^19.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
