--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,3 +41,11 @@ chrono = "0.4"
 dirs = "5.0"
 tauri-plugin-dialog = "2.4.2"
 base64 = "0.22.1"
+
+# Windows API for window detection
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.58", features = [
+    "Win32_Foundation",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Graphics_Gdi"
+] }
