--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,43 +2,50 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*'  # runs when you push a tag like v1.0.0
   workflow_dispatch:
 
 jobs:
   release:
     permissions:
-      contents: write
+      contents: write  # needed to create releases
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest]
+        platform: [windows-latest, ubuntu-22.04, macos-latest]  # multi-platform
     runs-on: ${{ matrix.platform }}
 
     steps:
+      # 1. Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies (ubuntu only)
+      # 2. Install dependencies on Linux only
+      - name: Install dependencies (Linux only)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
 
+      # 3. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
 
+      # 4. Install Rust
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
+          # Build universal binaries for macOS
           targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
+      # 5. Install frontend dependencies
       - name: Install frontend dependencies
         run: npm install
 
+      # 6. Build the app using Tauri
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
         env:
@@ -47,5 +54,5 @@ jobs:
           tagName: ${{ github.ref_name }}
           releaseName: 'JustSnap ${{ github.ref_name }}'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true
+          releaseDraft: false   # publish immediately
           prerelease: false
